--- a/BaseballSabermetrics/BaseballSabermetrics.fsproj
+++ b/BaseballSabermetrics/BaseballSabermetrics.fsproj
@@ -6,7 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="DataCollection.fs" />
+    <Compile Include="HtmlHandler.fs" />
+    <Compile Include="WebWorker.fs" />
+    <Compile Include="BaseballDataCollector.fs" />
+    <Compile Include="ExcelExport.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
