--- a/BaseballSabermetrics/BaseballSabermetrics.fsproj
+++ b/BaseballSabermetrics/BaseballSabermetrics.fsproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="4.5.3.3" />
+    <PackageReference Include="FSharp.Data" Version="3.3.3" />
   </ItemGroup>
 
 </Project>
