API successfully grabs stats for player from website

--- a/DependencyHelpers/DependencyHelpers.fsproj
+++ b/DependencyHelpers/DependencyHelpers.fsproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>      
+    <Compile Include="Utilities.fs" />      
     <Compile Include="Exceptions.fs" />      
     <Compile Include="HtmlHandler.fs" />
     <Compile Include="DataAccess.fs" />
