API endpoint for a single player works!

--- a/Sabermetrics.API/Sabermetrics.API.fsproj
+++ b/Sabermetrics.API/Sabermetrics.API.fsproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="baseball.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Compile Include="Stats.fs" />
     <Compile Include="Controllers\BaseballStatsController.fs" />
     <Compile Include="Startup.fs" />
