--- a/BaseballSabermetrics/BaseballSabermetrics.fsproj
+++ b/BaseballSabermetrics/BaseballSabermetrics.fsproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="4.5.3.3" />
     <PackageReference Include="FSharp.Data" Version="3.3.3" />
+    <PackageReference Include="FSharpPlus" Version="1.1.7" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.4" />
   </ItemGroup>
 
