basketball database file

--- a/Sabermetrics.API/Sabermetrics.API.fsproj
+++ b/Sabermetrics.API/Sabermetrics.API.fsproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="basketball.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="baseball.db">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
