The get player endpoint for basketball works!

--- a/Sabermetrics.API/Sabermetrics.API.fsproj
+++ b/Sabermetrics.API/Sabermetrics.API.fsproj
@@ -12,6 +12,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Compile Include="Stats.fs" />
+    <Compile Include="Controllers\BasketballStatsController.fs" />
     <Compile Include="Controllers\BaseballStatsController.fs" />
     <Compile Include="Startup.fs" />
     <Compile Include="Program.fs" />
@@ -25,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BaseballSabermetrics\BaseballSabermetrics.fsproj" />
+    <ProjectReference Include="..\BasketballSabermetrics\BasketballSabermetrics.fsproj" />
   </ItemGroup>
 
 </Project>
