--- a/Sabermetrics.API/appsettings.json
+++ b/Sabermetrics.API/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "StatsWebsites": {
-    "Baseball": "https://baseball-reference.com"
+    "Baseball": "https://baseball-reference.com",
+    "Basketball": "https://basketball-reference.com"
   }
 }
